--- a/lab1/deploy/nginx/html/index.html
+++ b/lab1/deploy/nginx/html/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header class="header">
             <h1>Area Checker</h1>
-            <p>Ильин Никита | P3210 | 408698</p>
+            <p>Ильин Никита | P3210 | 408698 | Вар. 488778</p>
         </header>
 
         <div class="controls">
@@ -163,6 +163,10 @@
             })
             .then(response => response.json())
             .then(data => {
+                if (data.error) {
+                    console.log(data.error);
+                    alert(data.error);
+                }
                 drawCoordinateSystem(R);
                 drawAreas(R);
 
